add race buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>DnD Project</h1>
+        <h1>Fantasy Characters Storyboard</h1>
+            <div id="buttons">
+                <button class="button", id="add-human" type="button" name="button">Human</button>
+                <button class="button", id="add-halfling" type="button" name="button">Halfling</button>
+                <button class="button", id="add-elf" type="button" name="button">Elf</button>
+                <button class="button", id="add-goblin" type="button" name="button">Goblin</button><br><br>
+                <button class="button", id="add-dark elf" type="button" name="button">Dark Elf</button>
+                <button class="button", id="add-dwarf" type="button" name="button">Dwarf</button>
+                <button class="button", id="add-orc" type="button" name="button">Orc</button>
+                <button class="button", id="add-wizard" type="button" name="button">Wizard</button>
+                <button class="button", id="add-race" type="button" name="button">Add a Race</button>
+            </div>
         <script src="src/task.js" ></script>
         <script src="index.js" ></script>
     </body>
