--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Fantasy Characters Storyboard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <h1>Fantasy Characters Storyboard</h1>
-            <div id="buttons">
+            <div id="select-race-container">
+                <h2>Pick or Create a Race:</h2>
                 <button class="button", id="add-human" type="button" name="button">Human</button>
                 <button class="button", id="add-halfling" type="button" name="button">Halfling</button>
                 <button class="button", id="add-elf" type="button" name="button">Elf</button>
@@ -20,31 +21,34 @@
                 <button class="button", id="add-wizard" type="button" name="button">Wizard</button>
                 <button class="button", id="add-race" type="button" name="button">Add a Race</button>
             </div>
-        <div id="characters-container">
-        </div>
-        <div id="race-form">
-            <form id="new-race-form" class="hidden">
-                <label for="race-name">Race Name</label><br>
-                <input type="text" name="race-name"><br>
-                <label for="image-link">Image Link</label><br>
-                <input id="form-submit" type="submit" value="Add Race">
-            </form>
-        </div>
-        <div id="character-form">
-            <form id="new-character-form" class="hidden">
-                <label for="character-name">Name</label><br>
-                <input type="text" name="character-name"><br>
-                <label for="character-age">Age</label><br>
-                <input type="text" name="character-age"><br>
-                <label for="character-appearance">Appearance</label><br>
-                <input type="text" name="character-appearance"><br>
-                <label for="character-personality">Personality</label><br>
-                <input type="textarea" rows="5" cols="50" name="character-personality" placeholder="How does your character behave? How do they respond to different situations? What is their baseline attitude? What provokes them? Excites them? Calms them? Makes them sad or happy?"><br>
-                <label for="character-background">Background</label><br>
-                <input type="text" name="character-background" placeholder="Where is your character from? What was their childhood like? What are their culture/ family like? Do they have religious/ spiritual practices? Do they have important relationships/ enemies?"><br>
-                <input id="form-submit" type="submit" value="Add Character">
-            </form>
-        </div>
+            <div id="new-race-container">
+                <h2>Add a New Race:</h2>
+                <form id="new-race-form" class="hidden">
+                    <label for="race-name">Race Name</label><br>
+                    <input type="text" name="race-name"><br>
+                    <label for="image-link">Image Link</label><br>
+                    <input type="text" name="image-link"><br><br>
+                    <input id="form-submit" type="submit" value="Add Race">
+                </form>
+            </div>
+            <div id="new-character-container">
+                <h2>Create a Character:</h2>
+                <form id="new-character-form" class="hidden">
+                    <label for="character-name">Name</label><br>
+                    <input type="text" name="character-name"><br>
+                    <label for="character-age">Age</label><br>
+                    <input type="text" name="character-age" size="7"><br>
+                    <label for="character-affiliation">Affiliation</label><br>
+                    <textarea type="text" name="character-affiliation" rows="3" cols="33" placeholder="Is your character good? Evil? Somewhere in between? Any associated tribes or clans?"></textarea><br>
+                    <label for="character-appearance">Appearance</label><br>
+                    <textarea type="text" name="character-appearance" rows="6" cols="33" placeholder="What does your character look like? Do they have any prominent features? Tattoos, scars, markings, piercings? What is their clothing style? Do they have a noticeable gait or a limp?"></textarea><br>
+                    <label for="character-personality">Personality</label><br>
+                    <textarea type="text" name="character-personality" rows="6" cols="33" placeholder="How does your character behave? How do they respond to different situations? What is their baseline attitude? What provokes them? Excites them? Calms them? Makes them sad or happy?"></textarea><br>
+                    <label for="character-background">Background</label><br>
+                    <textarea type="text" name="character-background" rows="6" cols="33" placeholder="Where is your character from? What was their childhood like? What are their culture/ family like? Do they have religious/ spiritual practices? Do they have important relationships/ enemies?"></textarea><br><br>
+                    <input id="form-submit" type="submit" value="Add Character">
+                </form>
+            </div>
         <script src="src/task.js" ></script>
         <script src="index.js" ></script>
     </body>
