--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
     </head>
+    <style>
+        .content {
+          max-width: 500px;
+          margin: auto;
+        }
+        </style>
     <body>
         <h1>Fantasy Characters Storyboard</h1>
             <div id="select-race-container">
                 <h2>Pick or Create a Race:</h2>
-                <button class="button", id="add-human" type="button" name="button">Human</button>
-                <button class="button", id="add-halfling" type="button" name="button">Halfling</button>
-                <button class="button", id="add-elf" type="button" name="button">Elf</button>
-                <button class="button", id="add-goblin" type="button" name="button">Goblin</button><br><br>
-                <button class="button", id="add-dark elf" type="button" name="button">Dark Elf</button>
-                <button class="button", id="add-dwarf" type="button" name="button">Dwarf</button>
-                <button class="button", id="add-orc" type="button" name="button">Orc</button>
-                <button class="button", id="add-wizard" type="button" name="button">Wizard</button>
-                <button class="button", id="add-race" type="button" name="button">Add a Race</button>
+                <button class="fantasy", id="add-human" type="button" name="button">Human</button>
+                <button class="fantasy", id="add-halfling" type="button" name="button">Halfling</button>
+                <button class="fantasy", id="add-elf" type="button" name="button">Elf</button>
+                <button class="fantasy", id="add-goblin" type="button" name="button">Goblin</button><br><br>
+                <button class="fantasy", id="add-dark elf" type="button" name="button">Dark Elf</button>
+                <button class="fantasy", id="add-dwarf" type="button" name="button">Dwarf</button>
+                <button class="fantasy", id="add-orc" type="button" name="button">Orc</button>
+                <button class="fantasy", id="add-wizard" type="button" name="button">Wizard</button>
+                <button class="fantasy", id="add-race" type="button" name="button">Add a Race</button>
             </div>
             <div id="new-race-container" class="hidden">
                 <h2>Add a New Race:</h2>
@@ -30,17 +36,17 @@
                     <input type="text" name="image-link"><br><br>
                     <input id="form-submit" type="submit" value="Add Race">
                 </form>
-                <button class="button" id="return-to-select-race" name="button">Return to Menu</button>
+                <button class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
             </div>
             <div id="view-all-characters-container" class="hidden">
                 <h2>Existing Characters:</h2>
-                <button class="button" id="create-character" name="button">Create a Character</button>
-                <button class="button" id="return-to-select-race" name="button">Return to Menu</button>
+                <button class="fantasy" id="create-character" name="button">Create a Character</button>
+                <button class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
             </div>
             <div id="view-single-character-container" class="hidden">
                 <h2>Character's Name:</h2>
-                <button class="button" id="return-to-view-race" name="button">Return to Race</button>
-                <button class="button" id="return-to-select-race" name="button">Return to Menu</button>
+                <button class="fantasy" id="return-to-view-race" name="button">Return to Race</button>
+                <button class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
             </div>
             <div id="new-character-container" class="hidden">
                 <h2>Create a Character:</h2>
@@ -50,17 +56,17 @@
                     <label for="character-age">Age</label><br>
                     <input type="text" name="character-age" size="7"><br>
                     <label for="character-affiliation">Affiliation</label><br>
-                    <textarea type="text" name="character-affiliation" rows="3" cols="33" placeholder="Is your character good? Evil? Somewhere in between? Any associated tribes or clans?"></textarea><br>
+                    <textarea id="styled" type="text" name="character-affiliation" rows="3" cols="33" placeholder="Is your character good? Evil? Somewhere in between? Any associated tribes or clans?"></textarea><br>
                     <label for="character-appearance">Appearance</label><br>
-                    <textarea type="text" name="character-appearance" rows="6" cols="33" placeholder="What does your character look like? Do they have any prominent features? Tattoos, scars, markings, piercings? What is their clothing style? Do they have a noticeable gait or a limp?"></textarea><br>
+                    <textarea id="styled" type="text" name="character-appearance" rows="6" cols="33" placeholder="What does your character look like? Do they have any prominent features? Tattoos, scars, markings, piercings? What is their clothing style? Do they have a noticeable gait or a limp?"></textarea><br>
                     <label for="character-personality">Personality</label><br>
-                    <textarea type="text" name="character-personality" rows="6" cols="33" placeholder="How does your character behave? How do they respond to different situations? What is their baseline attitude? What provokes them? Excites them? Calms them? Makes them sad or happy?"></textarea><br>
+                    <textarea id="styled" type="text" name="character-personality" rows="6" cols="33" placeholder="How does your character behave? How do they respond to different situations? What is their baseline attitude? What provokes them? Excites them? Calms them? Makes them sad or happy?"></textarea><br>
                     <label for="character-background">Background</label><br>
-                    <textarea type="text" name="character-background" rows="6" cols="33" placeholder="Where is your character from? What was their childhood like? What are their culture/ family like? Do they have religious/ spiritual practices? Do they have important relationships/ enemies?"></textarea><br><br>
+                    <textarea id="styled" type="text" name="character-background" rows="6" cols="33" placeholder="Where is your character from? What was their childhood like? What are their culture/ family like? Do they have religious/ spiritual practices? Do they have important relationships/ enemies?"></textarea><br><br>
                     <input id="form-submit" type="submit" value="Add Character">
                 </form>
-                <button class="button" id="return-to-view-race" name="button">Return to Race</button>
-                <button class="button" id="return-to-select-race" name="button">Return to Menu</button>
+                <button class="fantasy" id="return-to-view-race" name="button">Return to Race</button>
+                <button class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
             </div>
         <script src="src/task.js" ></script>
         <script src="index.js" ></script>
