--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <input type="text" name="race-name"><br>
                     <label for="image-link">Image Link</label><br>
                     <input type="text" name="image-link"><br><br>
-                    <input id="form-submit" type="submit" value="Add Race">
+                    <input id="add-race" type="submit" value="Add Race">
                 </form>
                 <button class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
             </div>
@@ -52,7 +52,7 @@
                 <h2>Create a Character:</h2>
                 <form id="new-character-form">
                     <label for="character-name">Name</label><br>
-                    <input type="text" name="character-name"><br>
+                    <input type="text" id="styled" name="character-name"><br>
                     <label for="character-age">Age</label><br>
                     <input type="text" name="character-age" size="7"><br>
                     <label for="character-affiliation">Affiliation</label><br>
@@ -63,7 +63,7 @@
                     <textarea id="styled" type="text" name="character-personality" rows="6" cols="33" placeholder="How does your character behave? How do they respond to different situations? What is their baseline attitude? What provokes them? Excites them? Calms them? Makes them sad or happy?"></textarea><br>
                     <label for="character-background">Background</label><br>
                     <textarea id="styled" type="text" name="character-background" rows="6" cols="33" placeholder="Where is your character from? What was their childhood like? What are their culture/ family like? Do they have religious/ spiritual practices? Do they have important relationships/ enemies?"></textarea><br><br>
-                    <input id="form-submit" type="submit" value="Add Character">
+                    <input id="add-character" type="submit" value="Add Character">
                 </form>
                 <button class="fantasy" id="return-to-view-race" name="button">Return to Race</button>
                 <button class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
