--- a/index.html
+++ b/index.html
@@ -18,50 +18,46 @@
             <div id="select-race-container">
                 <h2>Pick or Create a Race:</h2>
                 <div id="race-button-container">
-                    <button onclick="toggleHiddenValues('new-race-container')" class="fantasy" id="add-race" type="button" name="button">Add a Race</button>
                 </div>
             </div>
             <div id="new-race-container">
                 <h2>Add a New Race:</h2>
                 <form id="new-race-form">
                     <label for="race-name">Race Name</label><br>
-                    <input type="text" name="race-name"><br>
+                    <input id="race-name" type="text" name="race-name"><br>
                     <label for="image-link">Image Link</label><br>
-                    <input type="text" name="image-link"><br><br>
-                    <input id="add-race" type="submit" value="Add Race">
+                    <input id="image-link" type="text" name="image-link"><br><br>
                 </form>
+                <div id="new-race-buttons"></div>
                 <button onclick="toggleHiddenValues('select-race-container')" class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
             </div>
             <div id="view-all-characters-container">
                 <h2>Existing Characters:</h2>
                 <div id="character-button-container">
                 </div>
-                <button onclick="toggleHiddenValues('select-race-container')" class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
+                <button onclick="returnToHomeScreen()" class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
             </div>
             <div id="view-single-character-container">
                 <div id="character-attributes-container"></div>
-                <button onclick="toggleHiddenValues('view-all-characters-container')"class="fantasy" id="return-to-view-race" name="button">Return to Race</button>
                 <button onclick="toggleHiddenValues('select-race-container')" class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>  
             </div>
             <div id="new-character-container">
                 <h2>Create a Character:</h2>
                 <form id="new-character-form">
                     <label for="character-name">Name</label><br>
-                    <input type="text" id="styled" name="character-name"><br>
+                    <input id="character-name" type="text" id="styled" name="character-name"><br>
                     <label for="character-age">Age</label><br>
-                    <input type="text" name="character-age" size="7"><br>
+                    <input id="character-age" type="text" name="character-age" size="7"><br>
                     <label for="character-affiliation">Affiliation</label><br>
-                    <textarea id="styled" type="text" name="character-affiliation" rows="3" cols="33" placeholder="Is your character good? Evil? Somewhere in between? Any associated tribes or clans?"></textarea><br>
+                    <textarea id="character-affiliation" type="text" name="character-affiliation" rows="3" cols="33" placeholder="Is your character good? Evil? Somewhere in between? Any associated tribes or clans?"></textarea><br>
                     <label for="character-appearance">Appearance</label><br>
-                    <textarea id="styled" type="text" name="character-appearance" rows="6" cols="33" placeholder="What does your character look like? Do they have any prominent features? Tattoos, scars, markings, piercings? What is their clothing style? Do they have a noticeable gait or a limp?"></textarea><br>
+                    <textarea id="character-appearance" type="text" name="character-appearance" rows="6" cols="33" placeholder="What does your character look like? Do they have any prominent features? Tattoos, scars, markings, piercings? What is their clothing style? Do they have a noticeable gait or a limp?"></textarea><br>
                     <label for="character-personality">Personality</label><br>
-                    <textarea id="styled" type="text" name="character-personality" rows="6" cols="33" placeholder="How does your character behave? How do they respond to different situations? What is their baseline attitude? What provokes them? Excites them? Calms them? Makes them sad or happy?"></textarea><br>
+                    <textarea id="character-personality" type="text" name="character-personality" rows="6" cols="33" placeholder="How does your character behave? How do they respond to different situations? What is their baseline attitude? What provokes them? Excites them? Calms them? Makes them sad or happy?"></textarea><br>
                     <label for="character-background">Background</label><br>
-                    <textarea id="styled" type="text" name="character-background" rows="6" cols="33" placeholder="Where is your character from? What was their childhood like? What are their culture/ family like? Do they have religious/ spiritual practices? Do they have important relationships/ enemies?"></textarea><br><br>
-                    <input id="add-character" type="submit" value="Add Character">
+                    <textarea id="character-background" type="text" name="character-background" rows="6" cols="33" placeholder="Where is your character from? What was their childhood like? What are their culture/ family like? Do they have religious/ spiritual practices? Do they have important relationships/ enemies?"></textarea><br><br>
                 </form>
-                <button onclick="toggleHiddenValues('view-all-characters-container')"class="fantasy" id="return-to-view-race" name="button">Return to Race</button>
-                <button onclick="toggleHiddenValues('select-race-container')" class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>  
+                <div id="new-character-buttons"></div>
             </div>
         <script src="src/task.js" ></script>
         <script src="index.js" ></script>
