--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                 <h2>Existing Characters:</h2>
                 <div id="character-button-container">
                 </div>
-                <button onclick="returnToHomeScreen()" class="fantasy" id="return-to-select-race" name="button">Return to Menu</button>
             </div>
             <div id="view-single-character-container">
                 <div id="character-attributes-container"></div>
@@ -59,7 +58,10 @@
                 </form>
                 <div id="new-character-buttons"></div>
             </div>
-        <script src="src/task.js" ></script>
+        <script src="src/race.js" ></script>
+        <script src="src/character.js" ></script>
+        <script src="src/raceApi.js" ></script>
+        <script src="src/characterApi.js" ></script>
         <script src="index.js" ></script>
     </body>
 </html>
