refactoring, add delete option

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
                 <div id="race-button-container">
                 </div>
             </div>
+            <form id="search-form">
+                <input type ="text" placeholder="Search Characters" id="search-input">
+                <input type="submit" class="fantasy">
+            </form>   
             <div id="new-race-container">
-                <h2>Add a New Race:</h2>
+                <h2>Add a New Race:</h2>           
                 <form id="new-race-form">
                     <label for="race-name">Race Name</label><br>
                     <input id="race-name" type="text" name="race-name"><br>
