--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         </style>
     <body>
         <h1>Fantasy Characters Storyboard</h1>
+
             <div id="select-race-container">
                 <h2>Pick or Create a Race:</h2>
                 <div id="race-button-container">
                 </div>
-            </div>
-            <form id="search-form">
-                <input type ="text" placeholder="Search Characters" id="search-input">
-                <input type="submit" class="fantasy">
-            </form>   
+                <div id="new-race-button-container"></div>
+            </div> 
             <div id="new-race-container">
                 <h2>Add a New Race:</h2>           
                 <form id="new-race-form">
